add gateway for booking and request